[gd_scene load_steps=46 format=3 uid="uid://d0gyrtrtkg6a3"]

[ext_resource type="Script" uid="uid://cvjje38t3fxkg" path="res://Scripts/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://c8gag5bdruwaq" path="res://Assets/character/Sprite Sheet_greyscale.png" id="3_6t5aa"]
[ext_resource type="Texture2D" uid="uid://cmhdsr1xr5gkt" path="res://Assets/E.png" id="3_vgqql"]
[ext_resource type="PackedScene" uid="uid://cqdqeew7m0a8h" path="res://Scenes/text_box.tscn" id="4_vgqql"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6t5aa"]
atlas = ExtResource("3_6t5aa")
region = Rect2(480, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgqql"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkybt"]
atlas = ExtResource("3_6t5aa")
region = Rect2(512, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("3_6t5aa")
region = Rect2(480, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("3_6t5aa")
region = Rect2(512, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dp3o"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4iuc"]
atlas = ExtResource("3_6t5aa")
region = Rect2(480, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4e3"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqcod"]
atlas = ExtResource("3_6t5aa")
region = Rect2(512, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_igrcy"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgy"]
atlas = ExtResource("3_6t5aa")
region = Rect2(480, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("3_6t5aa")
region = Rect2(512, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs7ks"]
atlas = ExtResource("3_6t5aa")
region = Rect2(464, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6n3p"]
atlas = ExtResource("3_6t5aa")
region = Rect2(480, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqyp"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjfl"]
atlas = ExtResource("3_6t5aa")
region = Rect2(512, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi64h"]
atlas = ExtResource("3_6t5aa")
region = Rect2(528, 208, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ijsl"]
atlas = ExtResource("3_6t5aa")
region = Rect2(464, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1odr"]
atlas = ExtResource("3_6t5aa")
region = Rect2(480, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gysh"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfarp"]
atlas = ExtResource("3_6t5aa")
region = Rect2(512, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uwr"]
atlas = ExtResource("3_6t5aa")
region = Rect2(528, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_83xs0"]
atlas = ExtResource("3_6t5aa")
region = Rect2(464, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypfnu"]
atlas = ExtResource("3_6t5aa")
region = Rect2(480, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuaoq"]
atlas = ExtResource("3_6t5aa")
region = Rect2(496, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wohnl"]
atlas = ExtResource("3_6t5aa")
region = Rect2(512, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_36dho"]
atlas = ExtResource("3_6t5aa")
region = Rect2(528, 192, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh6i2"]
atlas = ExtResource("3_6t5aa")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4vc"]
atlas = ExtResource("3_6t5aa")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gxox"]
atlas = ExtResource("3_6t5aa")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_11gg7"]
atlas = ExtResource("3_6t5aa")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa8y"]
atlas = ExtResource("3_6t5aa")
region = Rect2(64, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tx1dd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t5aa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgqql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}],
"loop": true,
"name": &"idle_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dp3o")
}],
"loop": true,
"name": &"idle_left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4iuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqcod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igrcy")
}],
"loop": true,
"name": &"idle_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}],
"loop": true,
"name": &"idle_up",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs7ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6n3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi64h")
}],
"loop": true,
"name": &"move_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ijsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1odr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uwr")
}],
"loop": true,
"name": &"move_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83xs0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuaoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wohnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36dho")
}],
"loop": true,
"name": &"move_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh6i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gxox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11gg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa8y")
}],
"loop": true,
"name": &"move_up",
"speed": 8.0
}]

[sub_resource type="Gradient" id="Gradient_6t5aa"]
offsets = PackedFloat32Array(0, 0.012987, 1)
colors = PackedColorArray(0.948052, 0.948052, 0.948052, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vgqql"]
gradient = SubResource("Gradient_6t5aa")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.858974, 0.166667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4flbx"]
size = Vector2(8, 8)

[sub_resource type="Curve2D" id="Curve2D_cvnsp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -4)
}
point_count = 2

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("interactions", "text_box")]
script = ExtResource("1_onrkg")
interactions = [NodePath("UpInteract"), NodePath("DownInteract"), NodePath("LeftInteract"), NodePath("RightInteract")]
text_box = NodePath("Camera2D/CanvasLayer/TextBox")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 1, 0, 0.8)
sprite_frames = SubResource("SpriteFrames_tx1dd")
animation = &"idle_down"
autoplay = "idle_down"

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D"]
energy = 0.5
range_item_cull_mask = 31
texture = SubResource("GradientTexture2D_vgqql")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4flbx")

[node name="Up" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(0, -8)
collision_mask = 5
hit_from_inside = true
collide_with_areas = true

[node name="Down" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(0, 8)
collision_mask = 5
hit_from_inside = true
collide_with_areas = true

[node name="Left" type="RayCast2D" parent="."]
position = Vector2(-8, 0)
target_position = Vector2(-8, 0)
collision_mask = 5
hit_from_inside = true
collide_with_areas = true

[node name="Right" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(8, 0)
collision_mask = 5
hit_from_inside = true
collide_with_areas = true

[node name="UpInteract" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(0, -8)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="DownInteract" type="RayCast2D" parent="."]
position = Vector2(0, 8)
target_position = Vector2(0, 8)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="LeftInteract" type="RayCast2D" parent="."]
position = Vector2(-8, 0)
target_position = Vector2(-8, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="RightInteract" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(8, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true

[node name="InteractionPrompt" type="Node2D" parent="."]
z_index = 1024

[node name="Path2D" type="Path2D" parent="InteractionPrompt"]
curve = SubResource("Curve2D_cvnsp")

[node name="PathFollow2D" type="PathFollow2D" parent="InteractionPrompt/Path2D"]
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="InteractionPrompt/Path2D/PathFollow2D"]
visible = false
position = Vector2(24, 0)
texture = ExtResource("3_vgqql")

[node name="Camera2D" type="Camera2D" parent="."]
light_mask = 0
position = Vector2(0, 1.90735e-06)
scale = Vector2(839.306, -167.479)
zoom = Vector2(4, 4)
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
offset = Vector2(640, 400)
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 640, 400)

[node name="TextBox" parent="Camera2D/CanvasLayer" instance=ExtResource("4_vgqql")]
z_index = 4096
z_as_relative = true
offset_left = -104.0
offset_top = 24.0
offset_right = 104.0
offset_bottom = 72.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="finished" from="Camera2D/CanvasLayer/TextBox" to="." method="_on_text_box_finished"]
